--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 
-#JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/testexam;JDBC_USERNAME=dev;JDBC_PASSWORD=ax2
+#JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/tourdefrance;JDBC_USERNAME=root;JDBC_PASSWORD=12345678
 
 spring.jpa.show-sql=true
